# Sound-Sentiment-Analysis

./: .gitignore  pyproject.toml
Dataset/: test.xlsx  train.xlsx  train_balanced.xlsx  val.xlsx
pw_deep/: README.md  getting-started.ipynb  pyproject.toml
src/: audio_features.csv  data_loader.py  getting-started.ipynb  image_SA.ipynb  main.ipynb  text_SA.ipynb  utils.py  wav_SA.ipynb
