[tool.poetry]
name = "soundsentiment"
version = "0.1.0"
description = "Project work in deep learning, Sound Sentiment Analysis"
authors = ["Alice Turrini <alice.turrini@studio.unibo.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
librosa = "^0.10.2.post1"
openai-whisper = "^20240930"
torch = { version = "^2.0.1+cu121", source = "torch" }  # Change to cu121
torchaudio = "^2.1.0"
plotly = "^6.0.0"
openpyxl = "^3.1.5"
noisereduce = "^3.0.3"
soundfile = "^0.13.1"
notebook = "^7.3.2"
ipykernel = "^6.29.5"
transformers = "^4.48.3"
scikit-image = "^0.25.1"
opencv-python = "^4.11.0.86"
torchvision = {version = "^0.20.1", extras = ["cu121"], source = "torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
