[tool.poetry]
name = "pw-deep"
version = "0.1.0"
description = "Sound Sentiment Analysis"
authors = ["Alice Turrini <alice.turrini@studio.unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
